# SpendSense

./: .gitignore  pyproject.toml
spend_sense_server/: manage.py
spend_sense_server/budget/: urls.py  views.py
spend_sense_server/spend_sense_server/: asgi.py  settings.py  urls.py  wsgi.py
