[tool.poetry]
name = "spend_sense"
version = "0.1.0"
description = ""
authors = ["Egor Tarasenko <egorseno7@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.1.3"
djangorestframework = "^3.15.2"


[tool.poetry.dev-dependencies]
flake8 = "^6.0"
Flake8-pyproject = ">=1.2.0"
black = "==22.3.0"


[tool.black]
line-length = 88
skip-string-normalization = false

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "migrations",
    "tests"
]
ignore = [
    "E203",
    "E704",
    "W504",
    "E126",
    "W503"
]
max-complexity = 10
show-source = true
per-file-ignores = [
    "tests/*:D"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
